--- a/package.json
+++ b/package.json
@@ -29,13 +29,32 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@dimforge/rapier3d-compat": "^0.19.0",
+    "@monogrid/gainmap-js": "^3.4.0",
+    "@pmndrs/vanilla": "^1.25.0",
+    "angular-three": "^4.0.0",
+    "angular-three-rapier": "^4.0.0",
+    "angular-three-soba": "^4.0.0",
+    "camera-controls": "^2.10.0",
+    "hls.js": "^1.6.0",
+    "maath": "^0.10.8",
+    "meshline": "^3.3.0",
+    "ngxtension": "^7.0.0",
     "rxjs": "~7.8.0",
+    "stats-gl": "^3.8.0",
+    "three": "^0.182.0",
+    "three-custom-shader-material": "^6.4.0",
+    "three-mesh-bvh": "^0.9.0",
+    "three-stdlib": "^2.36.0",
+    "troika-three-text": "^0.52.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.1",
     "@angular/cli": "^21.0.1",
     "@angular/compiler-cli": "^21.0.0",
+    "@types/three": "^0.182.0",
+    "angular-three-plugin": "^4.0.9",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
