--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "html.customData": [
     "./node_modules/angular-three/metadata.json",
     "./node_modules/angular-three-soba/metadata.json"
+  ],
+  "cSpell.words": [
+    "ngts"
   ]
 }
