--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "@angular/router": "^21.0.0",
     "@dimforge/rapier3d-compat": "^0.19.0",
     "@monogrid/gainmap-js": "^3.4.0",
+    "@pmndrs/cannon-worker-api": "^2.4.0",
     "@pmndrs/vanilla": "^1.25.0",
     "angular-three": "^4.0.0",
+    "angular-three-cannon": "^4.0.0",
     "angular-three-rapier": "^4.0.0",
     "angular-three-soba": "^4.0.0",
     "camera-controls": "^2.10.0",
+    "cannon-es": "^0.20.0",
+    "cannon-es-debugger": "^1.0.0",
     "hls.js": "^1.6.0",
     "maath": "^0.10.8",
     "meshline": "^3.3.0",
