--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "prettier": {
     "printWidth": 100,
@@ -29,6 +30,8 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/core": "latest",
     "@dimforge/rapier3d-compat": "^0.19.0",
     "@monogrid/gainmap-js": "^3.4.0",
     "@pmndrs/cannon-worker-api": "^2.4.0",
@@ -57,10 +60,15 @@
     "@angular/build": "^21.0.1",
     "@angular/cli": "^21.0.1",
     "@angular/compiler-cli": "^21.0.0",
+    "@capacitor/angular": "^2.0.3",
+    "@capacitor/cli": "latest",
     "@types/three": "^0.182.0",
+    "angular-eslint": "21.1.0",
     "angular-three-plugin": "^4.0.9",
+    "eslint": "^9.39.1",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
+    "typescript-eslint": "8.47.0",
     "vitest": "^4.0.8"
   }
 }
