--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,8 @@ jobs:
         uses: gradle/gradle-build-action@v3
 
       - name: Build debug APK
-        run: ./gradlew assembleDebug
-
+        run: ce android && ./gradlew assembleDebug
+  
       - name: Check folder content of android output
         run: ls ./android/app/build/outputs/bundle/release
 
