--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,10 +43,22 @@ jobs:
         run: cd android && ./gradlew assembleDebug
 
       - name: Check folder content of android output
-        run: ls ./android/app/build/outputs/bundle/release
+        run: ls ./android/app/build/outputs/apk/debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: DiceGame-debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
+      
+      - name: Release APK
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Automated release of DiceGame APK for tag ${{ github.ref }}.
+          draft: false
+          prerelease: false
