--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,9 +56,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.sha:0:7 }}
-          release_name: Release ${{ github.sha:0:7 }}
+          tag_name: ${{ github.sha }}
+          release_name: Release ${{ github.sha }}
           body: |
-            Automated release of DiceGame APK for tag ${{ github.sha:0:7 }}.
+            Automated release of DiceGame APK for tag ${{ github.sha }}.
           draft: false
           prerelease: false
