--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,23 +51,24 @@ jobs:
         with:
           name: DiceGame-debug-apk
           path: android/app/build/outputs/apk/debug/app-debug.apk
-    
 
-      # - name: Download Artifact (for testing purposes)
-      #   uses: actions/download-artifact@v4
-      # - name: Create Release
-      #   uses: softprops/action-gh-release@v2
-      #   with:
-      #     files: android/app/build/outputs/apk/debug/app-debug.apk
-      #     tag_name: ${{ github.sha }}
-      #     body: "Automated release for commit ${{ github.sha }}"
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Release APK to GitHub Releases
-        uses: svenstaro/upload-release-action@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: android/app/build/outputs/apk/debug/app-debug.apk
-          tag: ${{ github.ref_name }}
-          overwrite: true
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Upload APK artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./android/app/build/outputs/apk/debug/app-debug.apk
+          asset_name: "DiceGame-debug${{ github.ref }}.apk"
+          asset_content_type: application/vnd.android.package-archive
