--- a/package.json
+++ b/package.json
@@ -1,13 +1,38 @@
 {
   "name": "three-game",
   "version": "0.0.0",
+  "main": "main.js",
+  "build": {
+    "appId": "org.iescamp.din.three-game",
+    "productName": "ThreeGame",
+    "files": [
+      "dist/ThreeGame/**/*",
+      "main.js",
+      "package.json"
+    ]
+  },
+  "win": {
+    "target": [
+      "nsis"
+    ]
+  },
+  "linux": {
+    "target": [
+      "AppImage"
+    ]
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "dev": "npm-run-all --parallel electron start",
+    "electron": "wait-on tcp:4200 && ng build --base-href ./ && electron .",
+    "package": "ng build && electron-builder",
+    "package-win": "ng build && electron-builder --win",
+    "package-linux": "ng build && electron-builder --linux"
   },
   "prettier": {
     "printWidth": 100,
@@ -65,10 +90,14 @@
     "@types/three": "^0.182.0",
     "angular-eslint": "21.1.0",
     "angular-three-plugin": "^4.0.9",
+    "electron": "^40.0.0",
+    "electron-builder": "^26.4.0",
     "eslint": "^9.39.1",
     "jsdom": "^27.1.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "~5.9.2",
     "typescript-eslint": "8.47.0",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.8",
+    "wait-on": "^9.0.3"
   }
 }
