--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,4 +1,4 @@
-name: Build Linux version
+name: Build Windows version
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
 
 jobs:
   build:
-    name: Build Linux
-    runs-on: ubuntu-latest
+    name: Build Windows
+    runs-on: windows-latest
 
     steps:
       - name: Checkout repository
