--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "three-game",
-  "version": "0.0.0",
+  "version": "1.0.8",
   "main": "main.js",
   "build": {
     "appId": "org.iescamp.din.three-game",
@@ -32,7 +32,7 @@
     "electron": "wait-on tcp:4200 && ng build --base-href ./ && electron .",
     "package": "ng build && electron-builder",
     "package-win": "ng build && electron-builder --win",
-    "package-linux": "ng build && electron-builder --linux"
+    "package-linux": "ng build && electron-builder build --publish always --x64 -l appimage"
   },
   "prettier": {
     "printWidth": 100,
