--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -21,10 +21,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build Angular project
+      - name: Build project
         run: npm run package-linux
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Check folder content of android output
+      - name: Check folder content output
         run: ls ./dist/*.AppImage
 
       - name: Upload AppImage
@@ -43,7 +45,7 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload APK artifact
+      - name: Upload AppImage artifact
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
