--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,10 +21,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build Angular project
+      - name: Build project
         run: npm run package-win
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Check folder content of android output
+      - name: Check folder content output
         run: ls ./dist/win-unpacked/*.exe
 
       - name: Compress folder to ZIP
@@ -48,7 +50,7 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload APK artifact
+      - name: Upload ZIP artifact
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
