--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -57,6 +57,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          on_release_exists: update
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
