test reusable workflows

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,13 +1,18 @@
 name: Build Linux version
 
 on:
-  push:
-    tags: ['v*.*.*']
+  workflow_call:
+    outputs:
+      artifact-name:
+        description: "Name of uploaded artifact"
+        value: ${{ jobs.build.outputs.artifact-name }}
 
 jobs:
   build:
     name: Build Linux
     runs-on: ubuntu-latest
+    outputs:
+      artifact-name: ${{ steps.upload.outputs.artifact-name }}
 
     steps:
       - name: Checkout repository
@@ -29,29 +34,32 @@ jobs:
       - name: Check folder content output
         run: ls ./dist/*.AppImage
 
-      - name: Upload AppImage
+      - id: upload-linux
+        name: Upload AppImage
         uses: actions/upload-artifact@v4
         with:
           name: ThreeGame-linux-AppImage
           path: ./dist/*.AppImage
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          on_release_exists: update
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
 
-      - name: Upload AppImage artifact
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.AppImage
-          asset_name: "ThreeGame-linux${{ github.ref }}.AppImage"
-          asset_content_type: application/x-appimage
+
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     on_release_exists: update
+      #     tag_name: ${{ github.ref }}
+      #     release_name: Release ${{ github.ref }}
+      #     draft: false
+      #     prerelease: false
+
+      # - name: Upload AppImage artifact
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: ./dist/*.AppImage
+      #     asset_name: "ThreeGame-linux${{ github.ref }}.AppImage"
+      #     asset_content_type: application/x-appimage
