--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "./node_modules/angular-three-soba/metadata.json"
   ],
   "cSpell.words": [
+    "github",
+    "linux",
     "ngts"
   ],
   "svg.preview.background": "transparent"
