--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./android/app/build/outputs/apk/debug/app-debug.apk
+          asset_path: ./android/app/build/outputs/apk/debug/*.apk
           asset_name: "DiceGame-debug${{ github.ref }}.apk"
           asset_content_type: application/vnd.android.package-archive
 
