--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -51,8 +51,8 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: DiceGame-debug-apk
-          path: android/app/build/outputs/apk/debug/app-debug.apk
+          name: apk-${{ github.ref }}
+          path: ./android/app/build/outputs/apk/debug/*.apk
 
       # - name: Create Release
       #   id: create_release
