--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -38,7 +38,7 @@ jobs:
         name: Upload AppImage
         uses: actions/upload-artifact@v4
         with:
-          name: ThreeGame-linux-AppImage
+          name: appimage-${{ github.ref }}
           path: ./dist/*.AppImage
 
 
