--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,21 +36,32 @@ jobs:
 
 # ---------- UPLOAD ARTIFACTS TO THE RELEASE
 
-## Upload APK artifact
+## Release APK
 
-      - name: Upload APK artifact
+      - name: Download APK artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: apk-${{ github.ref }}
+          path: ./dist/
+
+      - name: Release APK artifact
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./android/app/build/outputs/apk/debug/*.apk
+          asset_path: ./dist/*.apk
           asset_name: "DiceGame-debug${{ github.ref }}.apk"
           asset_content_type: application/vnd.android.package-archive
 
-## Upload Linux AppImage
+## Release Linux binaries
 
-      - name: Upload Linux AppImage artifact
+      - name: Download Linux AppImage artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: appimage-${{ github.ref }}
+
+      - name: Release Linux AppImage artifact
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -60,9 +71,14 @@ jobs:
           asset_name: "ThreeGame-linux${{ github.ref }}.AppImage"
           asset_content_type: application/x-appimage
 
-## Upload Windows EXE
+## Release Windows binaries
 
-      - name: Upload Windows EXE artifact
+      - name: Download Windows EXE artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: windows-${{ github.ref }}
+
+      - name: Release Windows EXE artifact
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
