change artifact name to sha

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: apk-${{ github.ref }}
+          name: apk-${{ github.sha }}
           path: ./android/app/build/outputs/apk/debug/*.apk
 
       # - name: Create Release
