--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: windows-${{ github.ref }}
+          name: windows-${{ github.sha }}
           path: ./dist/*.exe
 
       # - name: Create Release
