change release to artifact_name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,27 +38,17 @@ jobs:
 
 ## Release Linux binaries
 
-      - name: Download Linux AppImage artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: appimage-${{ github.sha }}
-
       - name: Release Linux AppImage artifact
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.AppImage
+          asset_path: ${{ needs.build-linux.outputs.artifact-name }}
           asset_name: "ThreeGame-linux${{ github.ref }}.AppImage"
           asset_content_type: application/x-appimage
 
 ## Release Windows binaries
-
-      - name: Download Windows EXE artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-${{ github.sha }}
 
       - name: Release Windows EXE artifact
         uses: actions/upload-release-asset@v1
@@ -66,17 +56,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.exe
+          asset_path: ${{ needs.build-windows.outputs.artifact-name }}
           asset_name: "ThreeGame-windows${{ github.ref }}.exe"
           asset_content_type: application/vnd.microsoft.portable-executable
 
 ## Release APK
-
-      - name: Download APK artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: apk-${{ github.sha }}
-          path: ./dist/
 
       - name: Release APK artifact
         uses: actions/upload-release-asset@v1
@@ -84,6 +68,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.apk
+          asset_path: ${{ needs.build-apk.outputs.artifact-name }}
           asset_name: "DiceGame-debug${{ github.ref }}.apk"
           asset_content_type: application/vnd.android.package-archive
