--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,11 @@ jobs:
   build-linux:
     uses: ./.github/workflows/build-linux.yml
 
-  build-windows:
-    uses: ./.github/workflows/build-windows.yml
+  # build-windows:
+  #   uses: ./.github/workflows/build-windows.yml
 
-  build-apk:
-    uses: ./.github/workflows/build-apk.yml
+  # build-apk:
+  #   uses: ./.github/workflows/build-apk.yml
 
   deploy:
     needs: [
