--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     name: Build Windows
     runs-on: windows-latest
+    outputs:
+      artifact-name: ${{ steps.set-artifact.outputs.artifact-name }}
 
     steps:
       - name: Checkout repository
@@ -33,29 +35,14 @@ jobs:
         run: ls ./dist/win-unpacked/*.exe
 
       - name: Upload
+        id: upload-windows
         uses: actions/upload-artifact@v4
         with:
           name: windows-${{ github.sha }}
           path: ./dist/*.exe
 
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     on_release_exists: update
-      #     tag_name: ${{ github.ref }}
-      #     release_name: Release ${{ github.ref }}
-      #     draft: false
-      #     prerelease: false
-
-      # - name: Upload artifacts
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: ./dist/*.exe
-      #     asset_name: "ThreeGame-windows${{ github.ref }}.exe"
-      #     asset_content_type: application/x-msdownload
+      - id: set-artifact
+        name: Set artifact-name output
+        run: |
+          ARTIFACT_NAME="windows-${{ github.sha }}"
+          echo "artifact-name=$ARTIFACT_NAME" >> $GITHUB_OUTPUT
