--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,17 @@ jobs:
   build-linux:
     uses: ./.github/workflows/build-linux.yml
 
-  # build-windows:
-  #   uses: ./.github/workflows/build-windows.yml
+  build-windows:
+    uses: ./.github/workflows/build-windows.yml
 
-  # build-apk:
-  #   uses: ./.github/workflows/build-apk.yml
+  build-apk:
+    uses: ./.github/workflows/build-apk.yml
 
   deploy:
     needs: [
       build-linux,
-      # build-apk,
-      # build-windows
+      build-apk,
+      build-windows
     ]
     name: Deploy Artifacts
     runs-on: ubuntu-latest
@@ -36,9 +36,7 @@ jobs:
 
 # ---------- UPLOAD ARTIFACTS TO THE RELEASE
 
-      - run: echo "Linux AppImage ${{ needs.build-linux.outputs.artifact-name }}"
-      # - run: echo "Windows EXE ${{ needs.build-windows.outputs.artifact-name }}"
-      # - run: echo "APK ${{ needs.build-apk.outputs.artifact-name }}"
+## Release Linux binaries
 
       - name: Download Linux artifact
         uses: actions/download-artifact@v4
@@ -56,9 +54,6 @@ jobs:
           fi
           echo "appfile=$FILE" >> $GITHUB_OUTPUT
 
-## Release Linux binaries
-
-
       - name: Release Linux AppImage artifact
         uses: actions/upload-release-asset@v1
         env:
@@ -69,26 +64,58 @@ jobs:
           asset_name: "ThreeGame-linux${{ github.ref }}.AppImage"
           asset_content_type: application/x-appimage
 
-# ## Release Windows binaries
+## Release Windows binaries
 
-#       - name: Release Windows EXE artifact
-#         uses: actions/upload-release-asset@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         with:
-#           upload_url: ${{ steps.create_release.outputs.upload_url }}
-#           asset_path: ${{ needs.build-windows.outputs.artifact-name }}
-#           asset_name: "ThreeGame-windows${{ github.ref }}.exe"
-#           asset_content_type: application/vnd.microsoft.portable-executable
+      - name: Download Windows artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ needs.build-windows.outputs.artifact-name }}
+          path: ./downloaded-windows
 
-# ## Release APK
+      - id: find-windows
+        name: Find downloaded Windows EXE
+        run: |
+          FILE=$(find ./downloaded-windows -type f -name '*.exe' | head -n1 || true)
+          if [ -z "$FILE" ]; then
+            echo "No Windows EXE found in ./downloaded-windows" >&2
+            exit 1
+          fi
+          echo "appfile=$FILE" >> $GITHUB_OUTPUT
 
-#       - name: Release APK artifact
-#         uses: actions/upload-release-asset@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         with:
-#           upload_url: ${{ steps.create_release.outputs.upload_url }}
-#           asset_path: ${{ needs.build-apk.outputs.artifact-name }}
-#           asset_name: "DiceGame-debug${{ github.ref }}.apk"
-#           asset_content_type: application/vnd.android.package-archive
+      - name: Release Windows EXE artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.find-windows.outputs.appfile }}
+          asset_name: "ThreeGame-windows${{ github.ref }}.exe"
+          asset_content_type: application/vnd.microsoft.portable-executable
+
+## Release APK
+
+      - name: Download APK artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ needs.build-apk.outputs.artifact-name }}
+          path: ./downloaded-apk
+
+      - id: find-apk
+        name: Find downloaded APK
+        run: |
+          FILE=$(find ./downloaded-apk -type f -name '*.apk' | head -n1 || true)
+          if [ -z "$FILE" ]; then
+            echo "No APK found in ./downloaded-apk" >&2
+            exit 1
+          fi
+          echo "appfile=$FILE" >> $GITHUB_OUTPUT
+
+      - name: Release APK artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.find-apk.outputs.appfile }}
+          asset_name: "DiceGame-debug${{ github.ref }}.apk"
+          asset_content_type: application/vnd.android.package-archive
